fix horizontal scrollbar issue

--- a/popup/syjon_style/default.css
+++ b/popup/syjon_style/default.css
@@ -3,7 +3,7 @@
 }
 
 div#side {
-  position: absolute;
+  position: fixed;
   transition: right 0.5s ease;
 }
 
